fixed spacing problem with grid

--- a/assets/styles/_sass/style.scss
+++ b/assets/styles/_sass/style.scss
@@ -115,9 +115,9 @@ $yeah: #f8aa29;
 }
 
 .coursework {
-  text-align: center;
   padding-bottom: 3rem;
   padding-right: 2rem;
+	margin: 0;
   border-right: 2px #686868 solid;
 
   h2{
